--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.sec_pc.hurryup3.MapActivity">
+    tools:context="com.hurryup.traffic.junga.hahaha.map.MapActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
