--- a/app/src/main/res/layout/activity_end_search.xml
+++ b/app/src/main/res/layout/activity_end_search.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:id="@+id/linearLayout"
         android:gravity="center"
         android:orientation="horizontal">
