--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -6,7 +6,7 @@
     tools:context="com.hurryup.traffic.junga.hahaha.map.MapActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:id="@+id/linearLayout"
         android:orientation="horizontal">
         <AutoCompleteTextView
