--- a/app/src/main/res/layout/activity_start_search.xml
+++ b/app/src/main/res/layout/activity_start_search.xml
@@ -7,7 +7,7 @@
     tools:context="com.hurryup.traffic.junga.hahaha.main.StartSearchActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="60dp"
         android:gravity="center"
 
         android:id="@+id/linearLayout"
