--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:paddingTop="100dp"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:background="#22d7d7"
-
-
     android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/splash_layout"
         android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_marginBottom="30dp">
 
         <ImageView
             android:id="@+id/splash_image"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:background="@drawable/opening_bus"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
+            android:background="@drawable/opening_bus"/>
 
         <TextView
             android:layout_width="wrap_content"
