--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,8 +9,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginBottom="30dp">
+        android:layout_centerVertical="true">
 
         <ImageView
             android:id="@+id/splash_image"
@@ -25,8 +24,12 @@
             android:layout_marginTop="20dp"
             android:id="@+id/splash_textView"
             android:textColor="#ffffff"
-            android:textSize="30dp"
+            android:textSize="40dp"
             android:typeface="normal" />
+
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"/>
     </LinearLayout>
 
 
