--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -47,7 +47,7 @@
         android:singleLine="true"
         android:id="@+id/tv_result_Endname"
         android:textColor="#ffffff"
-        android:layout_above="@+id/recyclerview_result"
+        android:layout_alignTop="@+id/iv_result_arrow"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
     
